--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
        
         <h1>UNAPEDA</h1>
-        <img src="/asset/asset0.png" alt="Logo_UNAPEDA">
+        <img src="./asset/asset0.png" alt="Logo_UNAPEDA">
     </header>
     <nav>
         <ul class="main-menu">
